--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -17,6 +17,11 @@ OPENROUTER_API_KEY=""
 OPENROUTER_BASE_URL="https://openrouter.ai/api/v1"
 OPENROUTER_MODEL="anthropic/claude-3.5-sonnet"
 
+# Redis (for BullMQ job queue)
+REDIS_HOST="localhost"
+REDIS_PORT=6384
+REDIS_PASSWORD=""
+
 # R2 Storage (S3-compatible)
 S3_ENDPOINT=""
 S3_REGION="auto"
