--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.730.0",
     "@aws-sdk/s3-request-presigner": "^3.730.0",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.1.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.0",
@@ -23,9 +24,11 @@
     "@prisma/client": "^6.3.1",
     "@ugc/shared": "*",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.66.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "ioredis": "^5.9.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "puppeteer": "^24.2.0",
