--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,8 +22,10 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.0",
+    "@nestjs/platform-socket.io": "^11.1.12",
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.5",
+    "@nestjs/websockets": "^11.1.12",
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.66.7",
@@ -36,6 +38,7 @@
     "puppeteer": "^24.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
