--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -14,7 +14,7 @@ RUN corepack enable && corepack prepare pnpm@latest --activate
 RUN apk add --no-cache python3 make g++
 
 # Copy all package files and workspace config
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml .npmrc ./
 COPY apps/api/package.json ./apps/api/
 
 # Install ALL dependencies (including dev, needed for build and prisma)
