--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -29,3 +29,15 @@ S3_BUCKET=""
 S3_ACCESS_KEY_ID=""
 S3_SECRET_ACCESS_KEY=""
 S3_PUBLIC_BASE_URL=""
+
+# LemonSqueezy (Billing)
+LS_STORE_ID=280827
+LS_STORE_SLUG=klippli
+LS_API_BASE=https://api.lemonsqueezy.com/v1
+LS_WEBHOOK_SECRET=
+LS_API_KEY=
+LS_PRO_VARIANT_ID=1254938
+
+# Test environment variant IDs:
+# Pro subscription: 1254938
+# Credit packs: small=1254961, medium=1254965, large=1254972
