--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,7 +26,7 @@
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.5",
     "@nestjs/websockets": "^11.1.12",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "~6.3.1",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.66.7",
     "class-transformer": "^0.5.1",
@@ -49,7 +49,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.12.0",
     "@types/passport-jwt": "^4.0.1",
-    "prisma": "^6.3.1",
+    "prisma": "~6.3.1",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
