--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     ]
   },
   "scripts": {
-    "dev:api": "npm run dev -w apps/api",
-    "dev:web": "npm run dev -w apps/web",
-    "build:api": "npm run build -w apps/api",
-    "build:web": "npm run build -w apps/web",
-    "db:generate": "npm run db:generate -w apps/api",
-    "db:push": "npm run db:push -w apps/api",
-    "db:migrate": "npm run db:migrate -w apps/api"
+    "dev": "pnpm --filter api --filter web dev",
+    "dev:api": "pnpm --filter api dev",
+    "dev:web": "pnpm --filter web dev",
+    "build": "pnpm --filter api --filter web build",
+    "build:api": "pnpm --filter api build",
+    "build:web": "pnpm --filter web build"
   },
   "devDependencies": {
     "typescript": "^5.7.3"
