--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,12 +26,14 @@
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.5",
     "@nestjs/websockets": "^11.1.12",
-    "@prisma/client": "~6.3.1",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.66.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.5",
     "ioredis": "^5.9.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -49,7 +51,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.12.0",
     "@types/passport-jwt": "^4.0.1",
-    "prisma": "~6.3.1",
+    "prisma": "^7.3.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
