Updates to pricing and web scraping

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -15,7 +15,7 @@ RESEND_API_KEY=""
 # OpenRouter (for LLM)
 OPENROUTER_API_KEY=""
 OPENROUTER_BASE_URL="https://openrouter.ai/api/v1"
-OPENROUTER_MODEL="anthropic/claude-3.5-sonnet"
+OPENROUTER_MODEL="anthropic/claude-sonnet-4.5"
 
 # Redis (for BullMQ job queue)
 REDIS_HOST="localhost"
